# ml_concepts_practice

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/github-cli-expert/: SKILL.md
.github/skills/gh-cli/: SKILL.md
common/: README.md
cv/cnn/: main.ipynb  transfer_learning.ipynb
linear-models/: README.md
metrics/: README.md
metrics/confusion-matrix/: main.ipynb
metrics/precision-recall-f1/: main.ipynb
model-selection/: README.md
model-selection/grid-search/: main.ipynb
model-selection/kfold/: main.ipynb  main.py
model-selection/random-search/: main.ipynb
nn/: README.md
nn/ann/: improved.ipynb  main.ipynb
nn/autograd/: main.ipynb
nn/dataset-loader/: basics.ipynb  main.ipynb
nn/hyperparameter-tuning/: basic.ipynb  main.ipynb
nn/modules/: main.ipynb  mock_impl_v1.ipynb  mock_impl_v2.ipynb
nn/perceptron/: main.ipynb
nn/tensors/: main.ipynb
nn/training-pipeline/: main.ipynb
prep/: PLAN.md  gh-cheatsheet.md  interview-checklist.md  papers.md
sequence/rnn/: main.ipynb
transformers/: README.md
trees/: README.md
