[project]
name = "ml-concepts"
version = "0.1.0"
description = "From-scratch implementations of machine learning concepts."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "tqdm>=4.66",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
torch = [
    "torch>=2.4",
    "torchvision>=0.19",
]
jax = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
]
tf = [
    "tensorflow>=2.17",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
]

[tool.hatch.build.targets.wheel]
packages = ["common"]
